// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> Render checkbox 1`] = `
<div
  class="mb-3 form-check"
>
  <input
    checked=""
    class="form-check-input"
    id="1"
    type="checkbox"
  />
  <label
    class="form-check-label"
    for="1"
  >
    Test label
  </label>
  <div
    class="form-text"
  >
    <small>
      Some help text
    </small>
  </div>
</div>
`;

exports[`<Checkbox/> Render uncheked checkbox 1`] = `
<div
  class="mb-3 form-check"
>
  <input
    class="form-check-input"
    id="1"
    type="checkbox"
  />
  <label
    class="form-check-label"
    for="1"
  >
    Test label
  </label>
  <div
    class="form-text"
  >
    <small>
      Some help text
    </small>
  </div>
</div>
`;
